# betting-ss

./: .gitignore  ARCHITECTURE.md  COMMIT.md  ODDS_INTEGRATION.md  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  TODO.md  cli.py  conftest.py  constants.py  extract_profiles.py  extract_rankings.py  global_constants.py  nfl_stats.ipynb  odds.ipynb  parlay_strategy_report.md  predict.py  prompt.py  pyproject.toml  pytest.ini  streamlit_app.py  teams.py  test_ev_calculator.py  test_nba_prediction.py
.claude/: settings.local.json
cli_utils/: extract.py  predict.py
config/: __init__.py  settings.yaml  urls.yaml
data/profiles/: .metadata.json
data/rankings/: rushing_offense.json  team_offense.json
docs/english/: ARCHITECTURE.md  NEW_SPORT.md  README.md
docs/spanish/: LEEME.md  NUEVO_DEPORTE.md
frontend/: __init__.py  app.py  config.py
frontend/components/: charts.py  (+2 more)
lab/: bundesliga_odds.ipynb  bundesliga_stats.ipynb
nba/: constants.py  extract_profiles.py  extract_rankings.py  nba_analyzer.py  nba_config.py  odds_scraper.py  predict.py  prompt.py  prompt_components.py  teams.py
nfl/: constants.py  extract_profiles.py  extract_rankings.py  nfl_analyzer.py  nfl_config.py  nfl_ev_analyzer.py  nfl_results_fetcher.py  odds_scraper.py  predict.py  prompt_components.py  teams.py
scripts/: migrate_predictions_to_json.py  regenerate_prediction_jsons.py  test_data_optimizer.py  test_odds_fetch.py
shared/: __init__.py  factory.py  register_sports.py
simulation/: __init__.py  nfl_simulation.py
sports/: __init__.py
streamlit/: theme.py  utils.py
(+247 files in other folders)
